--- a/labs/lab-6/templates/signup.html
+++ b/labs/lab-6/templates/signup.html
@@ -7,7 +7,25 @@
     <body>
         <h1>Sign Up</h1>
         <div>
-            <!-- Create a sign up form here -->
+            <form method="post">
+                <label for="FirstName">First Name:</label><br>
+                <input type="text" id="FirstName" name="FirstName">
+
+                <label for="LastName">Last Name:</label><br>
+                <input type="text" id="LastName" name="LastName">
+
+                <label for="Email">Email:</label><br>
+                <input type="text" id="Email" name="Email">
+
+                <label for="Phone">Phone:</label><br>
+                <input type="text" id="Phone" name="PhoneNumber">
+
+                <label for="Phone">Password:</label><br>
+                <input type="text" id="Password" name="Password">
+
+                <input type="submit" value="Submit"><br>
+
+              </form>
         </div>
 
         <br>
